@@ -4,6 +4,7 @@
 
 === 1.0.27 ===
 * Fixed compilation on modern compilers.
+* Updated build scripts and dependencies.
 
 === 1.0.26 ===
 * Added send/return options to communicate with another equalizers/plugins.
